[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/characters/player/player_hud/inventory/inventory_space_bg.png" type="Texture" id=1]
[ext_resource path="res://game/characters/player/player_hud/inventory/item_description_box.gd" type="Script" id=2]
[ext_resource path="res://game/characters/player/player_hud/inventory/sprite_bg.png" type="Texture" id=3]
[ext_resource path="res://game/items/weapons/iron_mace/iron_mace.png" type="Texture" id=4]
[ext_resource path="res://fonts/UASQUARE.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://fonts/UASQUARE.tres" type="DynamicFont" id=6]
[ext_resource path="res://game/characters/player/player_hud/player_hud.tres" type="Theme" id=7]

[sub_resource type="DynamicFont" id=1]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="item_info" type="NinePatchRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 480.0
margin_right = 640.0
margin_bottom = 654.0
rect_min_size = Vector2( 0, 174 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Rect" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="description_container" type="HBoxContainer" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 23.0
margin_right = 617.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_constants/separation = 20
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer/description_container" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 174.0
margin_bottom = 174.0
rect_min_size = Vector2( 174, 174 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 3 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/description_container/NinePatchRect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
_sections_unfolded = [ "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="item_sprite" type="TextureRect" parent="CenterContainer/description_container/NinePatchRect/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 10.0
margin_right = 164.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/description_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 194.0
margin_right = 594.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/description_container/VBoxContainer" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 170.0
rect_min_size = Vector2( 400, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
use_top_left = false
_sections_unfolded = [ "Rect", "Size Flags", "custom_constants" ]
__meta__ = {
"_edit_group_": true
}

[node name="item_text" type="VBoxContainer" parent="CenterContainer/description_container/VBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 104.0
margin_top = 29.0
margin_right = 296.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Size Flags" ]
__meta__ = {
"_edit_group_": true
}

[node name="item_name" type="Label" parent="CenterContainer/description_container/VBoxContainer/CenterContainer/item_text" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Item Name Here"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "Theme", "custom_fonts" ]

[node name="attributes_container" type="VBoxContainer" parent="CenterContainer/description_container/VBoxContainer/CenterContainer/item_text" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 37.0
margin_right = 192.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="attributes_title" type="Label" parent="CenterContainer/description_container/VBoxContainer/CenterContainer/item_text/attributes_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 192.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Attributes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="primary_dmg" type="Label" parent="CenterContainer/description_container/VBoxContainer/CenterContainer/item_text/attributes_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 192.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Primary Damage:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="secondary_dmg" type="Label" parent="CenterContainer/description_container/VBoxContainer/CenterContainer/item_text/attributes_container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 192.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 6 )
text = "Secondary Damage:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="buttons_container" type="HBoxContainer" parent="CenterContainer/description_container/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 174.0
margin_right = 400.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="use_button" type="Button" parent="CenterContainer/description_container/VBoxContainer/buttons_container" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 400.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Use/consume this item"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Use"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "Theme" ]

[node name="drop_button" type="Button" parent="CenterContainer/description_container/VBoxContainer/buttons_container" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 202.0
margin_right = 400.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Drop this item on the ground"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Drop"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "Theme" ]

[node name="equip_button" type="Button" parent="CenterContainer/description_container/VBoxContainer/buttons_container" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 268.0
margin_right = 400.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Equip this item"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Equip"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "Theme" ]

[node name="unequip_button" type="Button" parent="CenterContainer/description_container/VBoxContainer/buttons_container" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 303.0
margin_right = 400.0
margin_bottom = 30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "Unequip this item"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Unequip"
flat = false
align = 1
_sections_unfolded = [ "Hint", "Size Flags", "Theme" ]

[node name="throw_button" type="Button" parent="CenterContainer/description_container/VBoxContainer" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 154.0
margin_right = 400.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[connection signal="pressed" from="CenterContainer/description_container/VBoxContainer/buttons_container/use_button" to="." method="_on_use_button_pressed"]

[connection signal="pressed" from="CenterContainer/description_container/VBoxContainer/buttons_container/drop_button" to="." method="_on_drop_button_pressed"]

[connection signal="pressed" from="CenterContainer/description_container/VBoxContainer/buttons_container/equip_button" to="." method="_on_equip_button_pressed"]

[connection signal="pressed" from="CenterContainer/description_container/VBoxContainer/buttons_container/unequip_button" to="." method="_on_unequip_button_pressed"]


